--- a/views/pensum/show.jade
+++ b/views/pensum/show.jade
@@ -55,12 +55,7 @@ block content
                                 h2.text-center
                                     span.label.label-primary.text-size #{num}
                                 br
-                                -if (nota == null){
-                                    p.text-center
-                                        a(href="/asignatura/new/#{pensum.id}").btn.btn-info.btn-sm
-                                            i.fa.fa-plus-square
-                                            | &nbsp; Crear Materia
-                                -}
+
             .col-lg-3
                 h2.text-center
                     span.lead
@@ -82,15 +77,21 @@ block content
 
     .row
         .container
-            .col-lg-12
+            .col-sm-8
                 .panel.panel-default
                     .panel-heading
-                        span.badge.pull-right.badge-fix #{num}
+                        -if (pensum.status == 0){
+                            h4.pull-right
+                                a(href="/asignatura/new/#{pensum.id}").btn.btn-primary.btn-xs
+                                    i.fa.fa-plus
+                                    | &nbsp; Crear nueva materia
+                        -}
                         h5
-                            i.fa.fa-paste
-                            |&nbsp; Materias del Pensum
+                            i.fa.fa-mortar-board
+                            | &nbsp; Materias del pensum
+                            span.badge.margin-left-1 #{num}
                     .panel-body
-                        -if (nota == null){
+                        -if (num == 0){
                             p.text-center.text-info No se encuentran registradas materias en este pensum.
                         -}else{
 
@@ -109,41 +110,91 @@ block content
                                 -if (s != materia.nivel)
                                     .list-group-item.disabled Materias del nivel #{materia.nivel}
                                     .list-group-item
-                                        table.table
+                                        table.table.margin-botton-none
                                             tbody
                                                 tr
                                                     td(width="10%").text-center
                                                         h4.text-center
                                                             span.badge #{count}
-                                                    td(width="40%").text-center
-                                                        h4 #{materia.nombre}
+                                                    td(width="50%").text-center
+                                                        h4.text-primary #{materia.nombre}
                                                     td(width="10%").text-center
                                                         h4 #{materia.cradito}
                                                     td(width="10%").text-center
                                                         h4 #{materia.nivel}
-                                                    td(width="30%").text-center
-                                                        a(href="/asignatura/#{materia.id}").btn.btn-default.btn-group-sm
-                                                            i.fa.fa-search
-                                                            | &nbsp; Ver
+                                                    td(width="20%").text-center
+                                                        blockquote
+                                                            a(href="/asignatura/#{materia.id}").btn.btn-default.btn-group-sm
+                                                                i.fa.fa-search
+                                                                | &nbsp; Ver
                                     -s = materia.nivel
                                 -else
                                     .list-group-item
-                                        table.table
+                                        table.table.margin-botton-none
                                             tbody
                                                 tr
                                                     td(width="10%").text-center
                                                         h4.text-center
                                                             span.badge #{count}
-                                                    td(width="40%").text-center
-                                                        h4 #{materia.nombre}
+                                                    td(width="50%").text-center
+                                                        h4.text-primary #{materia.nombre}
                                                     td(width="10%").text-center
                                                         h4 #{materia.cradito}
                                                     td(width="10%").text-center
                                                         h4 #{materia.nivel}
-                                                    td(width="30%").text-center
-                                                        a(href="/asignatura/#{materia.id}").btn.btn-default.btn-group-sm
-                                                            i.fa.fa-search
-                                                            | &nbsp; Ver
+                                                    td(width="20%").text-center
+                                                        blockquote
+                                                            a(href="/asignatura/#{materia.id}").btn.btn-default.btn-group-sm
+                                                                i.fa.fa-search
+                                                                | &nbsp; Ver
                                 -count++
 
                         -}
+
+            .col-sm-4
+                .col-lg-12
+                    .panel.panel-default
+                        .panel-body
+                            p.lead.text-center.text-muted Estado del pensum
+                            h3.text-center #{pensum.nombre}
+                            -if (pensum.status == 0){
+                                h5.text-center
+                                    span.label.label-warning
+                                        i.fa.fa-unlock
+                                        | &nbsp; Sin confirmar
+                                p.text-muted
+                                    em Para confirmar el pensum, dede estar totalmente seguro que se ayan ingresado en totalidad las asignaturas pertenecientes a este pensum.
+                                p.text-center
+                                    em si es asi confirma el pensum en el siguente boton.
+                                legend
+                                form(method="POST", action="/pensum/edit")
+                                    input(type="hidden", name="_method", value="PUT")
+                                    input(type="hidden", name="pensum", value="#{pensum.id}")
+                                    input(type="hidden", name="postgrado", value="#{postgrado.id}")
+                                    input(type="hidden", name="accion", value="2")
+                                    p.text-center
+                                        button(type="submit").btn.btn-success.btn-sm
+                                            i.fa.fa-lock
+                                            | &nbsp; Confirmar pensum
+
+
+                            -}else{
+                                h5.text-center
+                                    span.label.label-success
+                                        i.fa.fa-lock
+                                        | &nbsp; Confirmado
+                            -}
+                -if (pensum.status == 0){
+                    .col-lg-12
+                        .panel.panel-default
+                            .panel-body
+                                h3.text-center
+                                    span.text-danger Anulacion de Pensum
+                                p.text-center
+                                    em Modulo que permite la anulacion y eliminacion de pensums que no estan en estado 'CONFIRMADO'.
+                                        span.text-danger &nbsp; Recuerde que al eliminar un pensum, todo su contenido de asignaturas seran eliminadas de igual manera.
+                                h3.text-center
+                                    a(href="/pensum/delete/#{pensum.id}").btn.btn-danger
+                                        i.fa.fa-times
+                                        | &nbsp; Anular Pensum
+                -}
